# generative-ai-experiment

./: .env.template  .gitignore  README.md  compose.yaml
notebook/work/: serp-api.ipynb
notebook/work/langchain/: agent.ipynb  youtube-extractor.ipynb
notebook/work/open-ai/: chat.ipynb  data.jsonl  fine-tuning.ipynb  function-calling.ipynb
python/webapp/: Dockerfile  init_sqlite.py  pyproject.toml
python/webapp/webapp/pages/: 1_Simple_Chat_Completion.py  2_Function_Calling.py  3_Recipe_Generation.py  4_Text_Tagging.py  5_PDF-based_Q&A.py  6_SQL_Generation.py  7_Scheduling_Agent.py
