[tool.poetry]
name = "webapp"
version = "0.1.0"
description = ""
authors = ["yagipy <email@yagipy.me>"]

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.31.0"
openai = "^1.12.0"
pydantic = "1.10.12"
llama-index = "^0.9.46"
pypdf = "^4.0.1"
nltk = "^3.8.1"
langchain = "^0.1.6"
langchain-community = "^0.0.19"
langchain-openai = "^0.0.5"
langchainhub = "^0.1.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
